Add taskboard framework
This commit refactors the service code to remove old classes that
were needed before using the taskboard framework.

  TBS4